// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/kanban/kanbanCard return kanbanCard and click on copy link menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard return kanbanCard and click on delete menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard return kanbanCard and click on duplicate menu  1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper override menuOpened optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
      <div
        class="Menu noselect left "
      >
        <div
          class="menu-contents"
        >
          <div
            class="menu-options"
          >
            <div>
              <div
                aria-label="Delete"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Delete
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
              <div
                aria-label="Duplicate"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-content-copy content-copy"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Duplicate
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div>
              <div
                aria-label="Copy link"
                class="MenuOption TextOption menu-option"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="menu-option__icon"
                  >
                    <i
                      class="CompassIcon icon-link-variant LinkIcon"
                    />
                  </div>
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Copy link
                  </div>
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
            <div />
          </div>
          <div
            class="menu-spacer hideOnWidescreen"
          />
          <div
            class="menu-options hideOnWidescreen"
          >
            <div
              aria-label="Cancel"
              class="MenuOption TextOption menu-option menu-cancel"
              role="button"
            >
              <div
                class="d-flex"
              >
                <div
                  class="noicon"
                />
              </div>
              <div
                class="menu-option__content"
              >
                <div
                  class="menu-name"
                >
                  Cancel
                </div>
              </div>
              <div
                class="noicon"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot 1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="true"
    style="opacity: 1;"
  >
    <div
      aria-label="menuwrapper"
      class="MenuWrapper optionsMenu "
      role="button"
    >
      <button
        type="button"
      >
        <i
          class="CompassIcon icon-dots-horizontal OptionsIcon"
        />
      </button>
    </div>
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;

exports[`src/components/kanban/kanbanCard should match snapshot with readonly 1`] = `
<div>
  <div
    class="KanbanCard false"
    draggable="false"
    style="opacity: 1;"
  >
    <div
      class="octo-icontitle"
    >
      <div
        class="octo-icon"
      >
        i
      </div>
      <div
        class="octo-titletext"
      >
        title
      </div>
    </div>
    <div
      class="octo-tooltip tooltip-top"
      data-tooltip="name"
    >
      <div
        class="octo-propertyvalue octo-propertyvalue--readonly"
      />
    </div>
  </div>
</div>
`;
